CSS/style.css
* {
  margin: 0;
  padding: 0;
  text-decoration: none;
  scroll-behavior: smooth;
  font-family: "Poppins";
}
:root {
  --bg-color: rgba(255, 255, 255, 0.973);
  --second-bg-color: #f5f5f5;
  --text-color: rgb(0, 0, 0);
  --main-color: rgb(11, 84, 147);
  --secondary-color: rgba(178, 213, 241, 0.596);
}
html {
  font-size: 60%;
  overflow-x: hidden;
}
body {
  background: var(--bg-color);
  color: var(--text-color);
  min-height: 100vh;
}
/*---Header---------------------------------------------------------------------*/

.header {
  box-sizing: border-box;
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  padding: 1rem 3%;
  background-color: rgba(178, 213, 241, 0.596);
  backdrop-filter: blur(10px);
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 1000;
}
#menu-icon {
  font-size: 3.5rem;
  color: var(--main-color);
  display: none;
}
.logo {
  cursor: pointer;
  transition: 0.3s ease-in-out;
}
.logo:hover {
  transform: scale(1.1);
}
.logo img {
  transition: 0.5s ease all;
  position: fixed;
}

.navbar a {
  font-size: 3rem;
  color: var(--text-color);
  margin-left: 6rem;
  font-weight: 500;
  transition: 0.3s ease-in-out;
  border-bottom: 3px solid transparent;
}
.navbar a:hover {
  color: var(--main-color);
  border-bottom: 3px solid var(--main-color);
}

/*---Section---------------------------------------------------------------------*/

section {
  min-height: 30vh;
  padding: 8rem;
  display: flex;
}

/*---Intro----------------------------------------------------------------------*/

.Intro {
  align-items: center;
  justify-content: center;
  background-color: var(--bg-color);
  min-height: 10vh;
  border-bottom: 1rem solid var(--main-color);
  border-radius: 10rem; 
}
.Intro-Content p {
  font-size: 2.5rem;
  text-align: center;
}
.Intro-Content h2 {
  text-align: center;
  font-size: 3.5rem;
  padding: 5rem;
}

/*---Rules-----------------------------------------------------------------------*/

.RulesGrey {
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: var(--bg-color);
  min-height: 10vh;
  padding: 0rem;
}

.RulesWhite {
  align-items: center;
  justify-content: center;
  background-color: var(--second-bg-color);
  min-height: 10vh;
}
.Rules-Content-Header {
  align-items: center;
  justify-content: center;
}
.Rules-Content-Header h1 {
  font-size: 8rem;
  padding: 2rem;
  text-align: center;
}
.Rules-Content-Header p {
  font-size: 4.5rem;
  text-align: center;
  padding-bottom: 10rem;
}
.Rules-Content {
  display: flex;
  flex-direction: column;
}
.Rules-Content h2 {
  font-size: 5rem;
  align-items: center;
  justify-content: center;
  padding-top: 3rem;
}
.Rules-List ul {
  list-style: circle;
  font-size: 3rem;
  padding: 3rem;
  list-style-type: disc;
}

/*---Scrollbar----------------------------------------------------------------*/

::-webkit-scrollbar {
  width: 5px;
}

::-webkit-scrollbar-thumb {
  background-color: var(--main-color);
  border-radius: 3rem;
}
::-webkit-scrollbar-track {
  background-color: var(--bg-color);
}

/*---Footer-------------------------------------------------------------------*/

.footer {
  background-color: var(--secondary-color);
  padding: 2vh;
  box-sizing: border-box;
  display: flex;
  flex-direction: column-reverse;
  bottom: 0;
  left: 0;
  width: 100%;
}

.footer ul {
  text-align: center;
  justify-content: space-between;
  font-size: 2rem;
  align-items: center;
  list-style-type: none;
}
.footer ul li {
  display: inline-block;
  margin-left: 20px;
  color: var(--text-color);
}
.footer ul li a {
  color: var(--text-color);
  border-bottom: 3px solid transparent;
  transition: 0.3s ease-in-out;
}
.footer ul li a:hover {
  border-bottom: 3px solid var(--main-color);
  color: var(--main-color);
}

